WIP: content VST section

--- a/_vsts/2012-10-02-e-fix-vsti.md
+++ b/_vsts/2012-10-02-e-fix-vsti.md
@@ -19,11 +19,9 @@ tags:
   - music
   - effect
 
-demo:
-  - url: http://jsfiddle.net/paLBA/
-    icon: fa-youtube
+download: Efix_VSTi.zip
+image: "e-fix-vsti_src_1.png"
 
-download: https://github.com/sanusart/Image-Side-Slide/archive/master.zip
 ---
 
 E-Fix VSTi ia free SFX generator plug-in. It can produce wide range of pads, chimes, industrial noise and a lot more of this kind. It comes in two sizes to pick from &#8211; small GUI and big GUI both inside the archive.
